# systemc-python

./: .copier-answers.yaml  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
systemc/: __init__.py
